@@ -1,3 +1,7 @@
+2010-01-02  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* doc/kernel.c (cmain): Add missing cast.
+
 2010-01-01  Robert Millan  <rmh.grub@aybabtu.com>
 
 	* autogen.sh: Use `gnulib-tool' to install gendocs.sh.
